k8s/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: app-ingress
  namespace: production

spec:
  ingressClassName: traefik

  rules:
    - host: bizships.com.br
      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: frontend-service
                port:
                  number: 80

    - host: www.bizships.com.br
      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: frontend-service
                port:
                  number: 80

    - host: api.bizships.com.br
      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: backend-service
                port:
                  number: 80
